--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.firebase.example.fireeats">
+    package="com.tysonfrederick.storyteller">
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
